Fixed the banner on mobile

--- a/client/src/styles/Fundraising.css
+++ b/client/src/styles/Fundraising.css
@@ -113,6 +113,7 @@
 /* Mobile */
 
 .mobile-fundraising-banner {
+  border: 5px solid red;
   width: 100vw;
   height: 50vh;
   background-image: url('../assets/fundraising/fundraising.jpg');
